--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ a {
 .schedule-card {
   display: flex;
   flex-direction: column;
-  align-items: end;
+  align-items: flex-end;
 }
 
 .schedule {
@@ -266,7 +266,22 @@ a {
   margin-bottom: 40px;
 }
 
+.seo-wrapper {
+  padding-left: 10px;
+
+  background-color: #f1e7d0;
+  background-image: url("../img/wafer-bg.jpg");
+  background-repeat: repeat;
+  border-radius: 10px;
+}
+
 .seo-title {
+  margin: 0;
+  padding: 0;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  padding-left: 18px;
+
   font-size: 24px;
   font-weight: 500;
   line-height: 30px;
@@ -275,6 +290,7 @@ a {
 
 .seo-features-list {
   display: flex;
+  flex-wrap: wrap;
 
   margin: 0;
   padding: 0;
@@ -282,16 +298,50 @@ a {
   list-style: none;
 }
 
+.feature-item {
+  position: relative;
+
+  width: 514px;
+  margin-right: 33px;
+  margin-bottom: 30px;
+  margin-left: 20px;
+}
+
+.seo-feature-icon {
+  position: absolute;
+  top: -16px;
+}
+
 .feature-description {
-font-size: 16px;
-font-weight: 400;
-line-height: 22px;
-color: #323232;
+  margin: 0;
+  padding: 0;
+  padding-left: 60px;
+
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  color: #323232;
 }
 
 /* Раздел блога */
+.blog-mailing {
+  margin-bottom: 40px;
+}
+
 .blog-list {
   display: flex;
+}
+
+.blog-news {
+  width: 560px;
+  height: 220px;
+  margin-right: 30px;
+  padding-left: 25px;
+
+  background-color: #ffffff;
+  background-image: url("../img/strawberry-bg.png");
+  background-repeat: no-repeat;
+  border-radius: 10px;
 }
 
 .blog-title {
@@ -302,6 +352,10 @@ color: #323232;
 }
 
 .blog-news-title {
+  display: block;
+
+  width: 282px;
+
   font-size: 24px;
   font-weight: 700;
   line-height: 30px;
@@ -311,6 +365,15 @@ color: #323232;
 }
 
 /* Раздел рассылки */
+.mailing {
+  width: 560px;
+  padding-top: 30px;
+  padding-left: 25px;
+
+  background-color: #f8f7f4;
+  border-radius: 10px;
+}
+
 .mailing-text {
   font-size: 16px;
   font-weight: 400;
@@ -448,7 +511,7 @@ color: #323232;
 /* Раздел пагинации */
 .pagination-list {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 
   margin: 0;
   margin-bottom: 18px;
@@ -473,6 +536,7 @@ color: #323232;
   margin-right: 10px;
 }
 
+.pagination-item,
 .pagination-cover:last-child {
   margin-right: 0;
 }
@@ -503,16 +567,35 @@ color: #323232;
 }
 
 .business-card {
+  display: flex;
+  flex-direction: column;
+
   position: relative;
   z-index: 1;
 
   width: 302px;
-  min-height: 305px;
+  min-height: 260px;
+  margin-top: 60px;
+  padding: 28px 17px;
 
   background-color: #ffffff;
+  border-radius: 10px;
 }
 
+.business-card-aligner {
+  display: flex;
+  justify-content: flex-end;
+}
+
+
+
 .card-adresstext {
+  width: 158px;
+
+  margin: 0;
+  padding: 0;
+  padding-bottom: 12px;
+
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
@@ -520,6 +603,10 @@ color: #323232;
 }
 
 .card-adress {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 14px;
+
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
@@ -527,6 +614,10 @@ color: #323232;
 }
 
 .card-teltext {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 8px;
+
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
@@ -534,6 +625,10 @@ color: #323232;
 }
 
 .card-tel {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 6px;
+
   font-size: 18px;
   font-weight: 700;
   line-height: 22px;
@@ -541,6 +636,10 @@ color: #323232;
 }
 
 .card-schedule {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 20px;
+
   font-size: 14px;
   font-weight: 400;
   line-height: 22px;
@@ -548,10 +647,16 @@ color: #323232;
 }
 
 .modal-writeus {
-font-size: 18px;
-font-weight: 700;
-line-height: 24px;
-color: #fefefe;
+  margin: 0;
+  padding: 0;
+
+  text-align: center;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  color: #fefefe;
+
+  background-color: #ed5a3c;
 }
 
 /*  */
@@ -589,10 +694,18 @@ color: #fefefe;
 }
 
 .menu-item:first-child {
+  position: relative;
+  padding-left: 15px;
+
   font-size: 13px;
   font-weight: 700;
   line-height: 18px;
   color: #ffffff;
+}
+
+.menu-item:first-child::before {
+  content: "";
+  backgrou-image: url("../img/heart-icon.svg");
 }
 
 .menu-item {
