--- a/css/style.css
+++ b/css/style.css
@@ -391,7 +391,7 @@ a {
 .button {
   display: block;
   width: 100px;
-  height: 40px;
+  /* height: 40px; */
 
   vertical-align: middle;
   text-align: center;
@@ -573,6 +573,11 @@ a {
 }
 
 .banner-item {
+  display: flex;
+  flex-direction: column;
+
+  width: 560px;
+  height: 229px;
   padding-left: 30px;
 
   border-radius: 10px;
@@ -595,6 +600,9 @@ a {
 }
 
 .banner-text {
+  width: 514px;
+  height: 40px;
+
   margin: 0;
   padding: 0;
   padding-bottom: 40px;
@@ -605,8 +613,15 @@ a {
 }
 
 .banner-button {
-  width: 165px;
-  height: 46px;
+  align-self: flex-end;
+
+  width: 150px;
+  /* height: 46px; */
+  margin-right: 20px;
+  padding-top: 10px;
+  padding-right: 15px;
+  padding-bottom: 10px;
+  padding-left: 15px;
 
   font-size: 18px;
   font-weight: 700;
@@ -1285,8 +1300,12 @@ a {
 }
 
 .social-button-container {
+  width: 32px;
+  height: 32px;
+  margin: 0;
   margin-right: 11px;
-  padding: 4px 6px;
+  padding: 0;
+  padding: 3px;
 
   opacity: 0.8;
   background-color:rgba(255, 255, 255, 0.5);
@@ -1299,8 +1318,8 @@ a {
 }
 
 .social-button-container:active {
-  opacity: 0.6;
-  background-color: #ffffff;
+  opacity: 0.7;
+  background-color: #e9e9e9;
 }
 
 /* Раздел меню */
