--- a/css/style.css
+++ b/css/style.css
@@ -1173,7 +1173,7 @@ a {
 /* Раздел контактов */
 .contacts {
   height: 430px;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .map {
@@ -1288,6 +1288,10 @@ a {
   margin-bottom: 25px;
 }
 
+.main-footer .container-spacebetween {
+  align-items: flex-end;
+}
+
 /* Раздел социальных сетей */
 .social-button-list {
   display: flex;
@@ -1324,11 +1328,13 @@ a {
 
 /* Раздел меню */
 .menu {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
 
   width: 350px;
+  height: 36px;
   margin: 0;
   padding: 0;
 
@@ -1336,8 +1342,7 @@ a {
 }
 
 .menu-item:first-child {
-  position: relative;
-  padding-left: 15px;
+  margin-right: 15px;
 
   font-size: 13px;
   font-weight: 700;
@@ -1347,20 +1352,16 @@ a {
 
 .menu-item:first-child::before {
   position: absolute;
-  content: "";
-  top: 5px;
-  left: 10px;
+  content: url("../img/heart-icon.svg");
 
-
-  background-image: url("../img/heart-icon.svg");
-  background-repeat: no-repeat;
-  background-size: 15px 13px;
+  top: 1px;
+  left: -20px;
 }
 
 .menu-item {
   margin: 0;
   margin-right: 20px;
-  margin-bottom: 9px;
+  margin-bottom: 3px;
   padding: 0;
 
   font-size: 13px;
@@ -1373,6 +1374,11 @@ a {
 }
 
 /* Раздел мейдин */
+.made-in {
+  display: flex;
+  flex-direction: column;
+}
+
 .made-in-text,
 .made-in-htmlacademy {
   margin: 0;
