Добавляет верстку блока подписки

--- a/css/style.css
+++ b/css/style.css
@@ -907,12 +907,38 @@ a {
 
 /* Раздел рассылки */
 .mailing {
+  display: flex;
   width: 560px;
-  padding-top: 30px;
-  padding-left: 25px;
+  padding-top: 5px;
+  padding-right: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+
+  background-image: url("../img/mailing-bg.jpg");
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  border-radius: 10px;
+}
+
+.mailing-bg {
+  width: 500px;
+  /* height: 211px; */
+  padding-top: 5px;
+  padding-right: 20px;
+  padding-bottom: 5px;
+  padding-left: 20px;
 
   background-color: #f8f7f4;
+
   border-radius: 10px;
+}
+
+.mailing-signup {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+
+  margin-top: 40px;
 }
 
 .mailing-text {
@@ -922,7 +948,24 @@ a {
   color: #5a5a5a;
 }
 
+.mailing-signup-input {
+  width: 352px;
+  height: 44px;
+  margin-right: 10px;
+  padding-left: 16px;
+
+  border: 1px solid rgba(178, 178, 178, 0.52);
+  background-color: #ffffff;
+  border-radius: 5px;
+}
+
 .mailing-button {
+  height: 20px;
+  padding-top: 11px;
+  padding-right: 20px;
+  padding-bottom: 14px;
+  padding-left: 20px;
+
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
