--- a/css/style.css
+++ b/css/style.css
@@ -1120,6 +1120,13 @@ a {
   margin-bottom: 40px;
 }
 
+.filters fieldset {
+  margin: 0;
+  padding: 0;
+
+  border: none;
+}
+
 .filters-sorting,
 .filters-pricing,
 .fat-title,
@@ -1131,6 +1138,7 @@ a {
 }
 
 .filters-sorting-select {
+  position: relative;
   padding-left: 10px;
 
   font-size: 16px;
@@ -1141,6 +1149,7 @@ a {
   width: 194px;
   height: 37px;
 
+  appearance: none;
   background-color: rgba(157, 177, 165, 0.8);
   border: none;
   border-radius: 25px;
@@ -1150,25 +1159,20 @@ a {
   color: #000000;
 }
 
-/* .filters-sorting-select:after {
+.select-selected:after {
   position: absolute;
   content: "";
+
   top: 14px;
   right: 10px;
-
   width: 0;
   height: 0;
+
   border: 6px solid transparent;
   border-color: #fff transparent transparent transparent;
-} */
+}
 
-/* .sorting-option {
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 18px;
-  color: #ffffff;
-} */
-
+/* Кастомный радио-фильтр */
 .filters-fat-list,
 .filler-list {
   margin: 0;
@@ -1177,6 +1181,72 @@ a {
   list-style: none;
 }
 
+.radio-container {
+  display: block;
+  position: relative;
+
+  margin-bottom: 12px;
+  padding-left: 35px;
+
+  user-select: none;
+  cursor: pointer;
+}
+
+.radio-container input {
+  position: absolute;
+
+  height: 0;
+  width: 0;
+
+  opacity: 0;
+  cursor: pointer;
+}
+
+.radio-mark {
+  position: absolute;
+  top: 5px;
+  left: -4px;
+
+  width: 16px;
+  height: 16px;
+
+  background-color: #849d8f;
+  border: 4px solid #ffffff;
+  border-radius: 50%;
+  opacity: 0.8;
+}
+
+.radio-container:hover input ~ .radio-mark {
+  opacity: 1;
+}
+
+.radio-container input:checked ~ .radio-mark {
+  background-color: #849d8f;
+}
+
+.radio-mark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.radio-container input:checked ~ .radio-mark:after {
+  display: block;
+}
+
+.radio-container .radio-mark:after {
+  top: 4px;
+  left: 4px;
+
+  width: 8px;
+  height: 8px;
+
+  border-radius: 50%;
+  background: white;
+}
+
+/* Кастомный радио-фильтр */
+
 .radio-container,
 .checkbox-container {
   font-size: 16px;
@@ -1184,6 +1254,75 @@ a {
   line-height: 18px;
   color: #ffffff;
 }
+
+/* Кастомный чекбокс-фильтр */
+.checkbox-container {
+  display: block;
+  position: relative;
+
+  padding-left: 35px;
+  margin-bottom: 12px;
+
+  font-size: 22px;
+
+  user-select: none;
+  cursor: pointer;
+}
+
+.checkbox-container input {
+  position: absolute;
+
+  height: 0;
+  width: 0;
+
+  opacity: 0;
+  cursor: pointer;
+}
+
+.checkbox-mark {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 25px;
+  height: 25px;
+
+  background-color: #ffffff;
+  opacity: 0.8;
+}
+
+.checkbox-container:hover input ~ .checkbox-mark {
+  background-color: #ffffff;
+  opacity: 1;
+}
+
+.checkbox-container input:checked ~ .checkbox-mark {
+  background-color: #2196F3;
+}
+
+.checkbox-mark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.checkbox-container input:checked ~ .checkbox-mark:after {
+  display: block;
+}
+
+.checkbox-container .checkbox-mark:after {
+  left: 9px;
+  top: 5px;
+
+  width: 5px;
+  height: 10px;
+
+  border: solid white;
+  border-width: 0 3px 3px 0;
+
+  /* transform: rotate(45deg); */
+}
+/* Кастомный чекбокс-фильтр */
 
 .filters-button {
   width: 144px;
@@ -1212,6 +1351,7 @@ a {
   box-shadow: inset 0 2px 1px #696969;
   background-color: #ededed;
 }
+
 
 /* Раздел каталога */
 .goods-list {
