--- a/css/style.css
+++ b/css/style.css
@@ -1284,20 +1284,20 @@ a {
   top: 0;
   left: 0;
 
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
 
-  background-color: #ffffff;
   opacity: 0.8;
+  border: 2px solid #ffffff;
+  border-radius: 3px;
 }
 
 .checkbox-container:hover input ~ .checkbox-mark {
-  background-color: #ffffff;
   opacity: 1;
 }
 
 .checkbox-container input:checked ~ .checkbox-mark {
-  background-color: #2196F3;
+  background-color: #849d8f;
 }
 
 .checkbox-mark:after {
@@ -1311,16 +1311,16 @@ a {
 }
 
 .checkbox-container .checkbox-mark:after {
-  left: 9px;
-  top: 5px;
+  left: 8px;
+  top: -4px;
 
-  width: 5px;
-  height: 10px;
+  width: 8px;
+  height: 16px;
 
   border: solid white;
-  border-width: 0 3px 3px 0;
+  border-width: 0 4px 4px 0;
 
-  /* transform: rotate(45deg); */
+  transform: rotate(45deg);
 }
 /* Кастомный чекбокс-фильтр */
 
