--- a/css/style.css
+++ b/css/style.css
@@ -1270,6 +1270,14 @@ a {
   border: none;
 }
 
+.filters-form {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
+  align-items: center;
+}
+
 .filters-sorting,
 .fat-title,
 .filler-title {
@@ -1315,6 +1323,8 @@ a {
 
 .custom-filters-sorting {
   position: relative;
+
+  margin-right: 16px;
 }
 
 .custom-arrow {
@@ -1333,6 +1343,7 @@ a {
 /* Ценовой фильтр */
 .filter-price {
   margin: 0;
+  margin-right: 15px;
   padding: 0;
 
   border: none;
@@ -1420,6 +1431,25 @@ a {
   list-style: none;
 }
 
+.filters-fat-list {
+  display: flex;
+
+  padding-top: 10px;
+  padding-right: 15px;
+  padding-bottom: 10px;
+  padding-left: 15px;
+
+  background-color: rgba(157, 177, 165, 0.8);
+  border: none;
+  border-radius: 25px;
+}
+
+.filters-fat-list {
+  display: flex;
+  flex-direction: row;
+  margin-right: 10px;
+}
+
 .radio-container {
   display: block;
   position: relative;
@@ -1495,6 +1525,23 @@ a {
 }
 
 /* Кастомный чекбокс-фильтр */
+.filler-list {
+  display: flex;
+
+  padding-top: 10px;
+  padding-right: 15px;
+  padding-bottom: 10px;
+  padding-left: 15px;
+
+  background-color: rgba(157, 177, 165, 0.8);
+  border: none;
+  border-radius: 25px;
+}
+
+.filler-list-item {
+  margin-right: 10px;
+}
+
 .checkbox-container {
   display: block;
   position: relative;
@@ -1718,7 +1765,7 @@ a {
 
 .map {
   position: absolute;
-  z-index: -1;
+  z-index: 1;
 
   width: 100%;
   height: 416px;
